fixed inbound req layout issue i overlooked

--- a/14-RESTAPI/client/src/components/notifications/layout/list/InboundAlerts.module.css
+++ b/14-RESTAPI/client/src/components/notifications/layout/list/InboundAlerts.module.css
@@ -3,16 +3,19 @@
     display: block;
     text-align: end;
     margin-top: -0.25rem;
-    margin-bottom: 0.25rem;
   }
 }
 
 .content {
   display: flex;
   justify-content: space-between;
+  gap: 0.375rem;
   overflow-x: scroll;
-  padding: 0.1rem;
+  padding: 0.5rem;
+  padding-top: 0.25rem;
 
+  > h2     { cursor: auto;       } /* default override */
+  strong   { cursor: pointer;    }
   > button { align-self: center; }
 }
 
